// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SftpAccountStatusComponent should show Sftp information when LoadingLoaderSettings is false 1`] = `
<pf-sftp-account-status
  LoadingLoadersettings="false"
>
  <div
    class="d-flex justify-content-between"
    data-qa-id="sftp-account-status-component"
  >
    <dl
      class="row"
    >
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Host
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Port
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Status
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
        
        <fa-icon
          class="text-danger"
          icon="times-circle"
        />
         Not Active 
        
        
      </dd>
    </dl>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show a spinner when LoadingLoaderSettings is true 1`] = `
<pf-sftp-account-status
  LoadingLoadersettings={[Function Boolean]}
>
  <div
    class="d-flex justify-content-between"
    data-qa-id="sftp-account-status-component"
  >
    <dl
      class="row"
    >
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Host
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Port
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Status
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
        <div>
          <fa-icon
            icon="spinner"
          />
        </div>
        
      </dd>
    </dl>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show an active status if CompanyAutoloaderStatus is true 1`] = `
<pf-sftp-account-status
  CompanyAutoloaderStatus={[Function Boolean]}
  LoadingLoadersettings="false"
>
  <div
    class="d-flex justify-content-between"
    data-qa-id="sftp-account-status-component"
  >
    <dl
      class="row"
    >
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Host
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Port
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Status
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
        
        <span>
          <fa-icon
            class="text-success"
            icon="check-circle"
          />
           Active 
        </span>
        
        
      </dd>
    </dl>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show an inactive status if CompanyAutoloaderStatus is false 1`] = `
<pf-sftp-account-status
  CompanyAutoloaderStatus="false"
  LoadingLoadersettings="false"
>
  <div
    class="d-flex justify-content-between"
    data-qa-id="sftp-account-status-component"
  >
    <dl
      class="row"
    >
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Host
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Port
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
      </dd>
      <dt
        class="col-3 col-sm-3 text-right"
      >
        Status
      </dt>
      <dd
        class="col-9 col-sm-9"
      >
        
        
        <fa-icon
          class="text-danger"
          icon="times-circle"
        />
         Not Active 
        
        
      </dd>
    </dl>
  </div>
</pf-sftp-account-status>
`;
